Minor Layout Fixes

--- a/Client/index.html
+++ b/Client/index.html
@@ -85,7 +85,7 @@
 
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center">
-        <div class="row text-center" style="margin-left:10px;margin-right:10px;">
+        <div class="row text-center" style="margin-left:10px;margin-right:50px;">
             <div class="col-sm-5">
                 <img src="Assets/Images/hjsmith-03.png" class="img-responsive center img" alt="Image" style="width:80%">
             </div>
@@ -96,26 +96,26 @@
                 <div class="row" style="margin-left:20px">
 
                     <div class="col-sm-3 shadowborder">
-                        <img src="Assets/Images/debit-card.png" class="img-responsive center img" alt="Image" style="width:100%">
+                        <img src="Assets/Images/debit-card.png" class="img-responsive center img" alt="Image" style="width:80%">
 
                         <h1 style="color:#5d073e;font-size:17px">Instant Payout</h1>
                     </div>
 
                     <div class="col-sm-1">
-                        <!-- Should Be Empty For Space in between -->
+                        <!-- Should Be Empty For Space in between --><br />
                     </div>
 
                     <div class="col-sm-3 shadowborder">
-                        <img src="Assets/Images/phone-call.png" class="img-responsive center img" alt="Image" style="width:100%">
+                        <img src="Assets/Images/phone-call.png" class="img-responsive center img" alt="Image" style="width:80%">
                         <h1 style="color:#5d073e;font-size:17px">24 hours Support</h1>
                     </div>
 
                     <div class="col-sm-1">
-                        <!-- Should Be Empty For Space in between -->
+                        <!-- Should Be Empty For Space in between --><br/>
                     </div>
 
                     <div class="col-sm-3 shadowborder">
-                        <img src="Assets/Images/support.png" class="img-responsive center img" alt="Image" style="width:100%">
+                        <img src="Assets/Images/support.png" class="img-responsive center img" alt="Image" style="width:80%">
                         <h1 style="color:#5d073e;font-size:17px">Stay Informed</h1>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
     <div class="container-fluid bg-3 text-center"></div>
 
     <div class="container-fluid bg-4 text-center">
-           <div class="row" style="margin-top:-110px; opacity:0.9">
+           <div class="row" style="margin-top:-150px; opacity:0.9">
 
             <div class="col-sm-2">
                 <!-- Should Be Empty For Space in between -->
@@ -138,7 +138,7 @@
                 <h1 style="color:#5d073e; font-weight:600">Get Started</h1>
                 <h3 style="color:#5d073e">We give up to date information, offer 24 hours support and also give instant payout when due.</h3>
 
-                <button class="custom-btn" style="font-size:medium" Onclick="DropDownClick(2)">SignUp/Login</button>
+                <button class="custom-btn" style="font-size:medium" Onclick="DropDownClick(2)">Get Started</button>
                 <div class="custom-dropdown" style="margin-left:150px;">
                     <div><button style="width:140px" onclick="LoginForm()">Login</button></div>
                     <div><button style="width:140px">Sign Up</button></div>
@@ -161,7 +161,7 @@
                  <h4 style="color:black">Fill the sign up form with the important details</h4>
               </div>
 
-              <div class="col-sm-1"><!-- Should Be Empty For Space in between --></div>
+              <div class="col-sm-1"><!-- Should Be Empty For Space in between --><br/></div>
 
               <div class="col-sm-3 shadowborder" style="border-left:15px solid  #00172e;  padding-top:2em">
                  <h4 style="color:black">Step 2</h4><br />
@@ -170,7 +170,7 @@
                  <h4 style="color:black; font-weight:bold"><img src="Assets/Icons/check.png" alt="add" width="15" height="15" /> Listen to songs</h4>
               </div>
 
-               <div class="col-sm-1"><!-- Should Be Empty For Space in between --></div>
+               <div class="col-sm-1"><!-- Should Be Empty For Space in between --><br/></div>
 
               <div class="col-sm-3 shadowborder" style="border-left:15px solid deeppink;  padding-top:2em; padding-bottom:1em">
                 <h4 style="color:black">Step 3</h4><br />
