ServerSide Login Fixed + Tested

--- a/Server/LoginTest.html
+++ b/Server/LoginTest.html
@@ -4,22 +4,20 @@
 	<title></title>
 </head>
 <body>
-	<h1>Login</h1>
-	<hr>
 
-	<form id="form" method="POST" onsubmit="return call()">
+    <p id="demo">Dynamic Contents should be filled in here</p>
 
-		<p>Username/Email: <input type="text" name="email"></p>
-		<p>Password: <input type="password" name="password"></p>
-		<p><input type="submit" name="login" value="login"></p>
-		
-	</form>
+    <form id="form" method="post" onsubmit="return call()">
+        <h5>Username:</h5><input type="text" name="text" /><br />
+        <h5>Password:</h5><input type="text" name="text" /><br />
+        <input type="submit" value="submit" />
+    </form>
 
 	<script type="text/javascript">
 		function call(){
 		var obj, dbParam, xmlhttp;
 		obj = {
-		    "Email": document.getElementsByName("text")[0].value,
+		    "Username": document.getElementsByName("text")[0].value,
 		    "Password": document.getElementsByName("text")[1].value
 		};
 
@@ -30,10 +28,10 @@
 		    if (this.readyState == 4 && this.status == 200)
 		    {
 		        myObj = JSON.parse(this.responseText);
-		        if (myObj[0]['Username'] == false)
-		            document.getElementById("demo").innerHTML = myObj[1]['Username'];
-		        else if (myObj[0]['Email'] == false)
-		            document.getElementById("demo").innerHTML = myObj[1]['Email'];
+		        if (myObj['Check'] == false)
+		            document.getElementById("demo").innerHTML = myObj['Info'];
+		        else
+		            window.open("#");
 		    }
 		};
 
