--- a/Server/SignUpTest.html
+++ b/Server/SignUpTest.html
@@ -6,11 +6,13 @@
     <p id="demo">Dynamic Contents should be filled in here</p>
 
 
-    <form id="form" method="post"  onsubmit="return call()">
-        <h5>Username:</h5><input type="text" name="text" /><br/>
-        <h5>Password:</h5><input type="text" name="text" /><br/>
-        <h5>Email:</h5><input type="text" name="text"/><br/>
-        <h5>Referral:</h5><input type="text" name="text"/><br/>
+    <form id="form" method="post" onsubmit="return call()">
+        <h5>FirstName:</h5><input type="text" name="text" /><br />
+        <h5>LastName:</h5><input type="text" name="text" /><br />
+        <h5>Phone:</h5><input type="text" name="text" /><br />
+        <h5>Password:</h5><input type="text" name="text" /><br />
+        <h5>Email:</h5><input type="text" name="text" /><br />
+        <h5>Referral:</h5><input type="text" name="text" /><br />
         <input type="submit" value="submit" />
     </form>
 
@@ -20,10 +22,12 @@
 function call(){
 var obj, dbParam, xmlhttp;
 obj = {
-    "Username": document.getElementsByName("text")[0].value,
-    "Password": document.getElementsByName("text")[1].value,
-    "Email": document.getElementsByName("text")[2].value,
-    "Referral": document.getElementsByName("text")[3].value
+    "FirstName": document.getElementsByName("text")[0].value,
+     "LastName": document.getElementsByName("text")[1].value,
+     "Phone": document.getElementsByName("text")[2].value,
+    "Password": document.getElementsByName("text")[3].value,
+    "Email": document.getElementsByName("text")[4].value,
+    "Referral": document.getElementsByName("text")[5].value
 };
 
 dbParam = JSON.stringify(obj);
@@ -33,8 +37,12 @@ xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200)
     {
         myObj = JSON.parse(this.responseText);
-        if (myObj[0]['Username'] == false)
-            document.getElementById("demo").innerHTML = '<h5 style="color:red">' + myObj[1]['Username'] + '</h5>';
+        if (myObj[0]['FirstName'] == false)
+            document.getElementById("demo").innerHTML = '<h5 style="color:red">' + myObj[1]['FirstName'] + '</h5>';
+      else if (myObj[0]['LastName'] == false)
+            document.getElementById("demo").innerHTML = '<h5 style="color:red">' + myObj[1]['LastName'] + '</h5>';
+      else if (myObj[0]['Phone'] == false)
+            document.getElementById("demo").innerHTML = '<h5 style="color:red">' + myObj[1]['Phone'] + '</h5>';
         else if (myObj[0]['Email'] == false)
             document.getElementById("demo").innerHTML = '<h5 style="color:red">' + myObj[1]['Email'] + '</h5>';
         else
