--- a/Client/index.html
+++ b/Client/index.html
@@ -68,10 +68,10 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Browse</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href='about.html'>About Us</a></li>
+                    <li><a href="browse.html">Browse</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" Onclick="DropDownClick(0)"><img src="Assets/Icons/user.png" alt="add" width="15" height="15" /> Users</a>
                         <div class="custom-dropdown">
