Final homepage Touch

--- a/Client/home.html
+++ b/Client/home.html
@@ -27,7 +27,7 @@
     <link href="./assets/css/all.css" rel="stylesheet">
 </head>
 
-<body onload="BufferLoad()">
+<body onload="BufferLoad()" style="margin: 0;">
     <div id="loader"></div>
 
     <div class="background-container">
